# mech

./: .template.yml  LICENSE  README.md  legacy.txt  setup.cfg  setup.py
ci/: master.cfg  master.env
docs/: conf.py  index.rst
fixtures/: arc_length.csv  deafault_car.yml  radius.csv
fixtures/cars/: drag_car.yml  heavy_car.yml
fixtures/tracks/straight/: arc_length.csv  radius_of_curvature.csv
mech/: __main__.py  assess.py  car.py  playabout.py  plot.py  simulate.py  track.py  utils.py  vel_update.py
mech/interface/: car_parser.py  cli.py  cli_parser.py  model_data.py  model_loader.py  snapshot_serializer.py  track_data.py  track_loader.py  trackpoints_parser.py
mech/models/: base.py  brakes.py  car.py  engine.py  loads.py  reactions.py  snapshots.py  track.py  wheel.py
mech/simulate/: optimise.py
mech/utils/: angles.py
scripts/: jobs.yml  launch.json
tests/: test_playabout.py  test_utils.py  test_vel_update.py
