[metadata]
name = mech
version = 0.1.0
description = 
url = https://github.com/benjyl/mech
keywords = 
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Benjy Lovat
author-email = benjy.lovat@gmail.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

# Linters
[flake8]
doctests = True
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, venv

[pydocstyle]
inherit = false
match-dir = (?!tests)(?!docs)(?!venv)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
ignore = D200, D203, D213, D406, D407

[mypy]
pretty = True
warn_return_any = True
warn_unused_configs = True

# Formatters
[isort]
line_length = 88
atomic = True
force_to_top = True
skip_glob = venv/*
